changing to virtual threads scenario6